Work in progress on streaming and incremental result fetching in large databases.